--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <section class="gallery">
         <h2>Featured Artworks</h2>
         <div class="grid">
-            <img src="images/art1.jpg" alt="Artwork 1">
-            <img src="images/art2.jpg" alt="Artwork 2">
-            <img src="images/art3.jpg" alt="Artwork 3">
-            <img src="images/art4.jpg" alt="Artwork 4">
+            <img src="art1.jpg" alt="Artwork 1">
+            <img src="art2.jpg" alt="Artwork 2">
+            <img src="art3.jpg" alt="Artwork 3">
+            <img src="art4.jpg" alt="Artwork 4">
         </div>
     </section>
 
