--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Artist Landing Page</title>
     <link rel="author" href="https://github.com/HackThe-Source">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="favicon_io/favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
